--- a/src/components/Join/join.css
+++ b/src/components/Join/join.css
@@ -1,29 +1,21 @@
 img{
-    text-align: center;
+    text-align: left;
     height: 85vh;
     width: 65%;
 }
-.meet{
-    display: flex;
-    flex-direction: row;
-}
 .box{
     text-align: center;
-    font-size: 40px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-input{
-    width: 50%;
-    height: 5%;
-    background-color: rgb(235, 221, 204);
-    border-radius: 10px;
-    margin-top: 15px;
+    margin-top: 20vh;
+    margin-left: 20vh;
 }
 button{
-    background-color: rgb(238, 243, 161);
-    font-size: 18px;
-    height: 20px;
+    border-radius: 6px;
+    border: 1px solid;
+    background-color: rgb(3, 3, 27);
+    color: white;
+    height: 30px;
     width: 100px;
-    border-radius: 5px;
-    border: 0px;
+    right: 90px;
+    margin-top: 9px;
+    margin-bottom: 10vh;
 }
